apollo-router/src/snapshots/apollo_router__axum_http_server_factory__tests__it_extracts_query_and_operation_name_on_get_requests.snap
---
source: apollo-router/src/axum_http_server_factory.rs
expression: "test_span::get_spans_for_root(&root_span.id().unwrap(),\n    &test_span::Filter::new(Level::INFO))"
---
{
  "name": "apollo_router::axum_http_server_factory::tests::root",
  "record": {
    "entries": [],
    "metadata": {
      "name": "root",
      "target": "apollo_router::axum_http_server_factory::tests",
      "level": "INFO",
      "module_path": "apollo_router::axum_http_server_factory::tests",
      "fields": {
        "names": []
      }
    }
  },
  "children": {
    "tower_http::trace::make_span::request": {
      "name": "tower_http::trace::make_span::request",
      "record": {
        "entries": [
          [
            "method",
            "GET"
          ],
          [
            "uri",
            "/graphql?query=query&operationName=operationName"
          ],
          [
            "version",
            "HTTP/1.1"
          ]
        ],
        "metadata": {
          "name": "request",
          "target": "tower_http::trace::make_span",
          "level": "INFO",
          "module_path": "tower_http::trace::make_span",
          "fields": {
            "names": [
              "method",
              "uri",
              "version"
            ]
          }
        }
      },
      "children": {}
    }
  }
}
